--- a/11.linux操作配置/1、服务器免密登录+自定义命名登录.md
+++ b/11.linux操作配置/1、服务器免密登录+自定义命名登录.md
@@ -73,7 +73,8 @@ IP 主机名简称 hostname
 
 
 
+![2021-09-13 14-31-08 的屏幕截图](calvinqi.com/typora2021-09-13%252014-31-08%2520%25E7%259A%2584%25E5%25B1%258F%25E5%25B9%2595%25E6%2588%25AA%25E5%259B%25BE.png)
 
 
 
-
+asdfghhj
