--- a/10.LeetCode/1.SQL/175. 组合两个数.md
+++ b/10.LeetCode/1.SQL/175. 组合两个数.md
@@ -11,7 +11,10 @@
 +-------------+---------+
 PersonId 是上表主键
 ```
+
+
 表2: Address
+
 ```sql
 +-------------+---------+
 | 列名         | 类型    |
@@ -24,13 +27,15 @@ PersonId 是上表主键
 AddressId 是上表主键
 ```
 
+
+
 编写一个 SQL 查询，满足条件：无论 person 是否有地址信息，都需要基于上述两表提供 person 的以下信息：
 
 ​	FirstName, LastName, City, State
 
 # 2.解答
 
-### 2.1 mysql-官方
+# 2.1 mysql-官方
 
 方法：使用 `outer join`
 算法
@@ -48,7 +53,7 @@ on Person.PersonId = Address.PersonId
 
 ------------------
 
-mysql-自己写的：
+## mysql-自己写的：
 
 ```sql
 select p.FirstName, p.LastName, a.City, a.State
