--- a/08.SQL基础/2.SQL高级教程/9.left join.md
+++ b/08.SQL基础/2.SQL高级教程/9.left join.md
@@ -148,13 +148,13 @@ mysql> SELECT * FROM access_log;
 以下实例中我们把 Websites 作为左表，access_log 作为右表：
 
 ## 实例
-
+```sql
 SELECT Websites.name, access_log.count, access_log.date
 FROM Websites
 LEFT JOIN access_log
 ON Websites.id=access_log.site_id
 ORDER BY access_log.count DESC;
-
+```
 执行以上 SQL 输出结果如下：
 
 ![img](https://i.loli.net/2021/07/22/wzOdQFqmG6tX7pR.jpg)
