--- a/09.LeetCode/1.SQL/512.游戏玩法分析2.md
+++ b/09.LeetCode/1.SQL/512.游戏玩法分析2.md
@@ -48,3 +48,80 @@ Result table:
 
 解法一：
 
+1.找选手最早的时间
+2.根据上面的查找结果，找设备
+
+mysql
+```sql
+SELECT player_id AS 'player_id', device_id AS 'device_id'
+FROM Activity
+WHERE (player_id, event_date) 
+    IN
+    (
+        SELECT player_id, min(event_date)
+        FROM Activity
+        GROUP BY player_id
+    )
+```
+
+
+
+解法二：
+
+使用一个内存子查询以及一个<=all就能解决问题，思路和代码一样
+
+```sql
+select player_id, device_id
+from activity a1
+where a1.event_date<=all(select a2.event_date from activity a2 where a1.player_id=a2.player_id);
+```
+
+
+
+方法三：
+
+```sql
+METHOD 2
+SELECT PLAYER_ID, DEVICE_ID
+FROM (SELECT PLAYER_ID, DEVICE_ID, RANK() OVER(PARTITION BY PLAYER_ID ORDER BY EVENT_DATE) AS `RANK`
+      FROM ACTIVITY) AS A
+WHERE `RANK` = 1;
+```
+
+
+
+方法四：
+
+使用Mysql8.0窗口函数解决：
+
+MySQL 8.0新特性提供了窗口函数，对于排序问题，常用的有三种窗口函数，以数值4,5,5,6为例:
+
+ 	1. ROW_NUMBER(): 求行数，结果为1,2,3,4
+ 	2. RANK(): 有间隔的分级，结果为1,2,2,4
+ 	3. DENSE_RANK(): 无间隔的分级，结果为1,2,2,3
+ 	 使用这些窗口函数时，要用over设定窗口，用法为:
+```sql
+function OVER windowName
+WINDOW windowName AS (PARTITION BY a_col ORDER BY b_col)
+```
+这两行代码含义为设定一个对`a_col`分组后对每组的`b_col`排序的窗口，对这个窗口应用`function`。
+
+在本题中，要找到每位玩家第一次登录的设备id，则需要对玩家id进行分组，每组求`ROW_NUMBER`，使用`ROW_NUMBER`而不使用其他窗口函数的原因是`ROW_NUMBER`结果是不重复的，适合本题的场景。
+代码如下:
+```sql
+SELECT
+    player_id, 
+    device_id
+FROM
+    (SELECT
+        player_id,
+        device_id,
+        ROW_NUMBER() OVER(PARTITION BY player_id ORDER BY event_date) AS rn
+    FROM
+        Activity) AS a
+WHERE 
+    rn = 1;
+```
+
+窗口函数的详解可见[MySQL官网](https://dev.mysql.com/doc/refman/8.0/en/window-function-descriptions.html)
+
