--- a/11.linux操作配置/01.linux运维(centos)/04.minIO安装.md
+++ b/11.linux操作配置/01.linux运维(centos)/04.minIO安装.md
@@ -33,7 +33,7 @@ docker run  -p 9000:9000 --name minio \
 
 ## 2、下载安装旧版本
 
-```
+```shell
 #拉取
 docker pull minio/minio:RELEASE.2021-06-17T00-10-46Z
 #启动
