--- a/11.linux操作配置/1、服务器免密登录+自定义命名登录.md
+++ b/11.linux操作配置/1、服务器免密登录+自定义命名登录.md
@@ -2,7 +2,7 @@
 
 ## 1、本地客户端生成秘钥对
 
-```
+```shell
 #终端执行
 ssh-keygen
 ```
@@ -11,7 +11,7 @@ ssh-keygen
 
 ## 2、上传公钥到服务器
 
-```
+```shell
 scp ~/.ssh/id_rsa.pub username@serviceIP:~/
 # scp -r ~/.ssh/ username@serviceIP:~/     // -r选项发送文件夹
 # username为服务器的用户名（root）,serviceIP为公网IP地址
@@ -19,7 +19,7 @@ scp ~/.ssh/id_rsa.pub username@serviceIP:~/
 
 ## 3、登录你的服务器，将秘钥添加到authorized_keys
 
-``` 
+``` shell
 #终端登录服务器
 ssh username@serviceIP
 #cd ~/.ssh.查看该目录下是否存在authorized_keys文件，若不存在。新建该文件
@@ -32,11 +32,11 @@ cat id_rsa.pub >> ~/.ssh/authorized_keys
 
 - 主机编辑ssh配置文件：
 
-  ```
+  ```shell
   vim ~/.ssh/config
   ```
 
-  ```
+  ```shell
   Host ServerName                 #自定义的名字
   HostName xxx.xxx.xxx.xxx        #服务器地址
   Port 22                         #默认连接端口
@@ -51,7 +51,7 @@ cat id_rsa.pub >> ~/.ssh/authorized_keys
 
 在`Ubuntu`系统中永久修改主机名只需要修改`/etc/hostname`文件就行了。主机名是存放在`/etc/hostname`文件中的，编辑`hostname`文件，在文件中输入新的主机名并保存该文件即可
 
-```
+```shell
 vim /etc/hostname
 #修改完重启查看修改过的主机名
 reboot
@@ -62,7 +62,7 @@ hostname
 
 ## 6. 配置主机名与IP地址的映射
 
-```
+```shell
 #用vim编辑 /etc/hosts文件
 vim etc/hosts
 #输入编辑内容
