--- a/Java/JavaBasis/03.ObjectOriented.md
+++ b/Java/JavaBasis/03.ObjectOriented.md
@@ -49,4 +49,4 @@ zhangsan
 lisi
 321
 ```
-![user内存图](https://i.loli.net/2021/04/30/C86pxWbdceHhm2z.png)  
+![user内存图](https://gitee.com/calvinqi/typoraPic/raw/master/typora/202203151754950.png)  
