--- a/Linux/Centos/00.CommonCommands.md
+++ b/Linux/Centos/00.CommonCommands.md
@@ -1,16 +1,36 @@
 # [CentOS7 常用命令大全](https://www.cnblogs.com/IIXS/p/13260771.html)
 
- 
+<!-- TOC -->
 
-# 1、学习教材
+- 1. 文件与目录操作命令
+- 2. 文件内容查看命令
+- 3. 文件内容处理命令
+- 4. 查询操作
+- 5. 压缩、解压
+- 6. 软件包管理
+    - 6.1. RPM命令使用
+    - 6.2. YUM命令
+- 7. 网络相关
+    - 7.1. 网络服务
+    - 7.2. 防火墙设置
+    - 7.3. 主机映射文件
+- 8. 系统相关
+    - 8.1. 重启命令
+    - 8.2. 关机命令
+    - 8.3. hostname命令
+- 1. 窗体快捷键
 
-# 2、Linux Shell 简介
+<!-- /TOC -->
+
+# 学习教材
+
+# Linux Shell 简介
 
 ​    Linux shell指的是一种程序，有了它，用户就能通过键盘输入指令来操作计算机了。Shell会执行用户输入的命令，并且在显示器上显示执行结果。这种交互的全过程都是基于文本的，与其他各章介绍的图形化操作不同。这种面向命令行的用户界面被称为CLI(Command Line interface)。在图形化用户界面(GUI)出现之前，人们一直是通过命令行界面来操作计算机的。现在，基于图形界面的工具越来越多，许多工作都不必使用Shell就可以完成了。然而，专业的Linux用户认为Shell是一个非常有用的工具，学习Linux时一定要学习Shell，至少要掌握一些基础知识和基本的命令。
 
-# 3、常用命令
+# 常用命令
 
-## 3.1 文件与目录操作命令
+## 1. 文件与目录操作命令
 
 | 命令                    | 解析                                                         |
 | ----------------------- | ------------------------------------------------------------ |
@@ -33,7 +53,7 @@
 | rm -f file1             | 删除 ‘file1’                                                 |
 | rm -rf dir1             | 删除 ‘dir1’ 目录及其子目录内容                               |
 
-## 3.2 文件内容查看命令
+## 2. 文件内容查看命令
 
 | 命令          | 解析                                 |
 | ------------- | ------------------------------------ |
@@ -44,7 +64,7 @@
 | tail -3 file1 | 查看一个文件的最后三行               |
 | vi file       | 打开并浏览文件                       |
 
-## 3.3 文件内容处理命令
+## 3. 文件内容处理命令
 
 | 命令                 | 解析                                                         |
 | -------------------- | ------------------------------------------------------------ |
@@ -56,7 +76,7 @@
 | sdiff file1 file2    | 以对比的方式显示两个文件的不同                               |
 | vi file              | 操作解析i进入编辑文本模式Esc退出编辑文本模式:w保存当前修改:q不保存退出vi:wq保存当前修改并退出vi |
 
-## 3.4 查询操作
+## 4. 查询操作
 
 | 命令                                             | 解析                                             |
 | ------------------------------------------------ | ------------------------------------------------ |
@@ -70,7 +90,7 @@
 | find -type f -print0 \| xargs -r0 grep -F ‘expr’ | 在当前目录及其子目录的常规文件中查找 ‘expr’      |
 | find -maxdepth 1 -type f \| xargs grep -F ‘expr’ | 在当前目录中查找 ‘expr’                          |
 
-## 3.5 压缩、解压
+## 5. 压缩、解压
 
 | 命令                            | 解析                                                         |
 | ------------------------------- | ------------------------------------------------------------ |
@@ -89,9 +109,9 @@
 | unzip file1.zip                 | 解压一个zip格式的压缩包到当前目录                            |
 | unzip test.zip -d /tmp/         | 解压一个zip格式的压缩包到 /tmp 目录                          |
 
-## 3.6 软件包管理
+## 6. 软件包管理
 
-### 3.6.1 RPM命令使用
+### 6.1. RPM命令使用
 
 ​    **rpm命令**是RPM软件包的管理工具。rpm原本是Red Hat Linux发行版专门用来管理Linux各项套件的程序，由于它遵循GPL规则且功能强大方便，因而广受欢迎。逐渐受到其他发行版的采用。RPM套件管理方式的出现，让Linux易于安装，升级，间接提升了Linux的适用度。
 
@@ -105,7 +125,7 @@
 | rpm -ql 包名                         | 获得rpm包中文件安装的位置 |
 | rpm -e 包名                          | 卸载                      |
 
-### 3.6.2 YUM命令
+### 6.2. YUM命令
 
 ​    Yum（全称为 Yellow dog Updater, Modified）是一个在Fedora和RedHat以及SUSE、CentOS中的Shell前端软件包管理器。基于rpm包管理，能够从指定的服务器自动下载rpm包并且安装，可以自动处理依赖性关系，并且一次安装所有依赖的软件包，无须繁琐地一次次下载、安装。
 
@@ -122,7 +142,7 @@
 | yum clean headers              | 删除所有头文件                                      |
 | yum clean all                  | 删除所有缓存的包和头文件                            |
 
-## 3.7 网络相关
+## 7. 网络相关
 
 | 命令                                            | 解析                   |
 | ----------------------------------------------- | ---------------------- |
@@ -134,85 +154,41 @@
 | iwlist scan                                     | 显示无线网络           |
 | ip addr show                                    | 显示网卡的IP地址       |
 
-### 3.7.1 网络服务
+### 7.1. 网络服务
+```shell
+#查看IP信息
+ip a
+#网络连通性测试
+ping [选项] 目标主机
+#设置网络信息
+ vi /etc/sysconfig/network-scripts/ifcfg-ens33
+ 
+#重启network网络服务
+ service network restart
+```
 
-1.  
+### 7.2. 防火墙设置
 
-   \#查看IP信息
+```shell 
+#查看防火墙状态
+systemctl status firewalld
+#打开防火墙
+ systemctl start firewalld
+ 
+#关闭防火墙
+systemctl stop firewalld
+ 
+#禁止开机启动
+ systemctl disable firewalld
+```
 
-2.  
+### 7.3. 主机映射文件
+```shell
+ #修改主机名与IP映射关系
+ vi /etc/hosts
+```
 
-   ip a
-
-3.  
-
-   \#网络连通性测试
-
-4.  
-
-   ping [选项] 目标主机
-
-5.  
-
-   \#设置网络信息
-
-6.  
-
-   vi /etc/sysconfig/network-scripts/ifcfg-ens33
-
-7.  
-
-   \#重启network网络服务
-
-8.  
-
-   service network restart
-
-### 3.7.2 防火墙设置
-
-1.  
-
-   \#查看防火墙状态
-
-2.  
-
-   systemctl status firewalld
-
-3.  
-
-   \#打开防火墙
-
-4.  
-
-   systemctl start firewalld
-
-5.  
-
-   \#关闭防火墙
-
-6.  
-
-   systemctl stop firewalld
-
-7.  
-
-   \#禁止开机启动
-
-8.  
-
-   systemctl disable firewalld
-
-### 3.7.3 主机映射文件
-
-1.  
-
-   \#修改主机名与IP映射关系
-
-2.  
-
-   vi /etc/hosts
-
-## 3.8 系统相关
+## 8. 系统相关
 
 | 命令                                           | 解析                                         |
 | ---------------------------------------------- | -------------------------------------------- |
@@ -228,103 +204,55 @@
 | cal 10 1988                                    | 显示指定月，年的月历                         |
 | date –date ‘1970-01-01 UTC 1427888888 seconds’ | 把一相对于1970-01-01 00:00的秒数转换成时间   |
 
-### 3.8.1 重启命令
+### 8.1. 重启命令
+```shell
+ 
+#立刻重启(root用户使用)
+reboot
+shutdown -r now
+ 
+#10分钟后自动重启(root用户使用)
+shutdown -r 10
+ 
+#在时间为20:35时候重启(root用户使用)
+shutdown -r 20:35
+ 
+#如果是通过shutdown命令设置重启的话，可以取消重启
+shutdown -c
+```
 
-1.  
+### 8.2. 关机命令
+```shell
+ 
+#立刻关机(root用户使用)
+halt
+poweroff
+shutdown -h now
+init 0
+ 
+#10分钟后自动关机
+shutdown -h 10
+```
 
-   \#立刻重启(root用户使用)
+### 8.3. hostname命令
 
-2.  
+```shell
+\#查看主机名
+ 
+hostname
+ 
+\#设置主机名-临时修改
+ 
+hostname 主机名
+ 
+\#设置主机名-永久修改
+ 
+vi /etc/hostname
+```
 
-   reboot
+# 常用技巧
 
-3.  
-
-   shutdown -r now
-
-4.  
-
-   \#10分钟后自动重启(root用户使用)
-
-5.  
-
-   shutdown -r 10
-
-6.  
-
-   \#在时间为20:35时候重启(root用户使用)
-
-7.  
-
-   shutdown -r 20:35
-
-8.  
-
-   \#如果是通过shutdown命令设置重启的话，可以取消重启
-
-9.  
-
-   shutdown -c
-
-### 3.8.2 关机命令
-
-1.  
-
-   \#立刻关机(root用户使用)
-
-2.  
-
-   halt
-
-3.  
-
-   poweroff
-
-4.  
-
-   shutdown -h now
-
-5.  
-
-   init 0
-
-6.  
-
-   \#10分钟后自动关机
-
-7.  
-
-   shutdown -h 10
-
-### 3.8.3 hostname命令
-
-1.  
-
-   \#查看主机名
-
-2.  
-
-   hostname
-
-3.  
-
-   \#设置主机名-临时修改
-
-4.  
-
-   hostname 主机名
-
-5.  
-
-   \#设置主机名-永久修改
-
-6.  
-
-   vi /etc/hostname
-
-# 4、常用技巧
-
-## 4.1 窗体快捷键
+## 1. 窗体快捷键
 
 | 命令           | 解析                                                         |
 | -------------- | ------------------------------------------------------------ |
