--- a/Linux/Centos/01.nginx安装.md
+++ b/Linux/Centos/01.nginx安装.md
@@ -93,11 +93,9 @@ netstat -tunlp | grep 80
   systemctl enable nginx.service
   ```
 
-  
-
 ## 5.停止和重启
 
-```
+```shell
 #温和停止,处理完当前的任务再停止
 nginx -s quit
 #强制立即停止
@@ -107,19 +105,14 @@ nginx -s stop
 nginx -s reload   
 ```
 
-
-
 ---------------------------------------------
-
-
 
 ## 启动、结束、重启命令
 
-```
+```shell
 systemctl start nginx.service    启动nginx
 
 systemctl stop nginx.service    结束nginx
 
 systemctl restart nginx.service    重启nginx
 ```
-
