--- a/Linux/Centos/others/00.SystemCommonCommands.md
+++ b/Linux/Centos/others/00.SystemCommonCommands.md
@@ -47,6 +47,19 @@ firewall-cmd --panic-off
 firewall-cmd --query-panic
 ```
 
+# 查看端口进程命令
+```shell
+#查看某个端口占用情况，例如查看3306端口被哪个进程所占用
+netstat -tunlp | grep 3306
+netstat -anp | grep ":22"
+netstat -aultp  //查看哪些端口被占用
+lsof -iTCP:22 -sTCP:LISTEN
+#根据进程名查看相应进程信息,根据进程 id 查看进程的详细信息
+ps -ef | grep php
+ps -aux | grep php
+
+```
+
 # linux三剑客sed,awk,grep
 
 ## sed
