--- a/Linux/Centos/05.acticemq安装.md
+++ b/Linux/Centos/05.acticemq安装.md
@@ -84,4 +84,16 @@ service activemq stop
 
   ![img](https://i.loli.net/2021/11/26/HNyV28dogTsZRU6.png)
 
-  
+# docker安装activemq
+```shell
+ docker run --name activemq \
+      -itd \
+      -p 8161:8161 \
+      -p 61616:61616 \
+      -e ACTIVEMQ_ADMIN_LOGIN=admin \
+      -e ACTIVEMQ_ADMIN_PASSWORD=admin \
+      --restart=always \
+      -v /data/activemq:/data/activemq \
+      -v /data/activemq/log:/var/log/activemq \
+      webcenter/activemq:latest
+```
