k8s_ha change keepalived

--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -139,21 +139,32 @@ vrrp_script check_haproxy {
     interval 3000
 }
 
+vrrp_script check_nginx {
+    script "/etc/keepalived/check_nginx.sh"
+    interval 2
+    weight -2
+}
+
 vrrp_instance VI_1 {
-    state Master
-    interface ens18
-    virtual_router_id 80
-    priority 100
+    state MASTER #来决定主从
+    interface ens18 # 绑定虚拟 IP 的网络接口，根据自己的机器填写
+    virtual_router_id 121 # 虚拟路由的 ID 号， 两个节点设置必须一样
+    mcast_src_ip 192.168.1.20 #填写本机ip
+    priority 100 # 节点优先级,主要比从节点优先级高
+    nopreempt # 优先级高的设置 nopreempt 解决异常恢复后再次抢占的问题
     advert_int 1
     authentication {
         auth_type PASS
-        auth_pass 111111
+        auth_pass 1111
     }
-    virtual_ipaddress {
-        192.168.1.10/24
-    }
+    # 将 track_script 块加入 instance 配置块
     track_script {
+        chk_nginx
+        check_haproxy
+    }
 
+    virtual_ipaddress {
+        192.168.1.10
     }
 }
 EOF
@@ -169,21 +180,32 @@ vrrp_script check_haproxy {
     interval 3000
 }
 
+vrrp_script check_nginx {
+    script "/etc/keepalived/check_nginx.sh"
+    interval 2
+    weight -2
+}
+
 vrrp_instance VI_1 {
-    state Master
-    interface ens18
-    virtual_router_id 80
-    priority 90
+    state MASTER #来决定主从
+    interface ens18 # 绑定虚拟 IP 的网络接口，根据自己的机器填写
+    virtual_router_id 121 # 虚拟路由的 ID 号， 两个节点设置必须一样
+    mcast_src_ip 192.168.1.21 #填写本机ip
+    priority 90 # 节点优先级,主要比从节点优先级高
+    nopreempt # 优先级高的设置 nopreempt 解决异常恢复后再次抢占的问题
     advert_int 1
     authentication {
         auth_type PASS
-        auth_pass 111111
+        auth_pass 1111
     }
-    virtual_ipaddress {
-        192.168.1.10/24
-    }
+    # 将 track_script 块加入 instance 配置块
     track_script {
+        check_nginx
+        check_haproxy
+    }
 
+    virtual_ipaddress {
+        192.168.1.10
     }
 }
 EOF
