--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -67,10 +67,16 @@ yum install docker-ce -y && systemctl enable docker.service
 #设置docker的驱动，和k8s的驱动保持一致，也可以在里面配置你自己的镜像仓库添加参数”insecure-registries”（离线部署k8s时最好配置仓库）
 cat > /etc/docker/daemon.json <<EOF
 {
-    "registry-mirrors": ["http://xsgbmvdm.mirror.aliyuncs.com"],    
-    "log-driver":"json-file",
-    "log-opts": {"max-size":"50m", "max-file":"3"},
-    "exec-opts": ["native.cgroupdriver=systemd"]
+  "registry-mirrors": ["http://f1361db2.m.daocloud.io",
+                      "https://registry.docker-cn.com",
+                      "http://hub-mirror.c.163.com",
+                      "https://docker.mirrors.ustc.edu.cn"
+                      ],
+  "exec-opts": ["native.cgroupdriver=systemd"],
+  "log-driver": "json-file",
+  "log-opts": {"max-size": "100m"
+  },
+  "storage-driver": "overlay2"
 }
 EOF
 #进行时间同步（所有节点执行）
