--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -166,7 +166,7 @@ vrrp_instance VI_1 {
     }
     # 将 track_script 块加入 instance 配置块
     track_script {
-        chk_nginx
+        check_nginx
         check_haproxy
     }
 
