--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -248,7 +248,7 @@ enabled=1
 gpgcheck=0
 repo_gpgcheck=0
 gpgkey=https://mirrors.aliyun.com/kubernetes/yum/doc/yum-key.gpg https://mirrors.aliyun.com/kubernetes/yum/doc/rpm-package-key.gpg
-
+EOF
 #所有节点安装kubectl、kubelet、kubeadm并设置开机启动
 yum -y install kubelet-1.23.0 kubeadm-1.23.0 kubectl-1.23.0 && systemctl enable kubelet && systemctl start kubelet
 
@@ -279,7 +279,7 @@ cat > /etc/kubernetes/kubeadm-config.yaml << EOF
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
 kubernetesVersion: v1.23.9
-controlPlaneEndpoint: "192.168.1.10:8443"
+controlPlaneEndpoint: "192.168.1.10:6443"
 apiServer:
   certSANs:
   - 192.168.1.20
