--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -46,13 +46,13 @@ modprobe -- ip_vs
 modprobe -- ip_vs_rr
 modprobe -- ip_vs_wrr
 modprobe -- ip_vs_sh
-modprobe -- nf_conntrack_ipv4
+modprobe -- nf_conntrack
 EOF
 
 ##执行脚本，验证修改结果：
 chmod 755 /etc/sysconfig/modules/ipvs.modules
 bash /etc/sysconfig/modules/ipvs.modules
-lsmod | grep -e ip_vs -e nf_conntrack_ipv4
+lsmod | grep -e ip_vs -e nf_conntrack
 ```
 
 ## 安装docker（所有节点安装）
