--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -146,11 +146,11 @@ vrrp_script check_haproxy {
     interval 3000
 }
 
-vrrp_script check_nginx {
-    script "/etc/keepalived/check_nginx.sh"
-    interval 2
-    weight -2
-}
+# vrrp_script check_nginx {
+#     script "/etc/keepalived/check_nginx.sh"
+#     interval 2
+#     weight -2
+# }
 
 vrrp_instance VI_1 {
     state MASTER #来决定主从
@@ -166,7 +166,7 @@ vrrp_instance VI_1 {
     }
     # 将 track_script 块加入 instance 配置块
     track_script {
-        check_nginx
+        #check_nginx
         check_haproxy
     }
 
@@ -187,11 +187,11 @@ vrrp_script check_haproxy {
     interval 3000
 }
 
-vrrp_script check_nginx {
-    script "/etc/keepalived/check_nginx.sh"
-    interval 2
-    weight -2
-}
+# vrrp_script check_nginx {
+#     script "/etc/keepalived/check_nginx.sh"
+#     interval 2
+#     weight -2
+# }
 
 vrrp_instance VI_1 {
     state MASTER #来决定主从
@@ -208,7 +208,7 @@ vrrp_instance VI_1 {
     # 将 track_script 块加入 instance 配置块
     track_script {
         check_nginx
-        check_haproxy
+        #check_haproxy
     }
 
     virtual_ipaddress {
