--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -194,7 +194,7 @@ vrrp_script check_haproxy {
 # }
 
 vrrp_instance VI_1 {
-    state MASTER #来决定主从
+    state BACKUP #来决定主从
     interface ens18 # 绑定虚拟 IP 的网络接口，根据自己的机器填写
     virtual_router_id 121 # 虚拟路由的 ID 号， 两个节点设置必须一样
     mcast_src_ip 192.168.1.21 #填写本机ip
