--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -141,22 +141,22 @@ global_defs {
    router_id LVS_DEVEL
 }
 
-vrrp_script check_haproxy {
-    script "/etc/keepalived/check_haproxy.sh"
-    interval 3000
-}
+#vrrp_script check_haproxy {
+#    script "/etc/keepalived/check_haproxy.sh"
+#    interval 3000
+#}
 
-# vrrp_script check_nginx {
-#     script "/etc/keepalived/check_nginx.sh"
-#     interval 2
-#     weight -2
-# }
+vrrp_script check_nginx {
+    script "/etc/keepalived/check_nginx.sh"
+    interval 2
+    weight -2
+}
 
 vrrp_instance VI_1 {
     state MASTER #来决定主从
     interface ens18 # 绑定虚拟 IP 的网络接口，根据自己的机器填写
     virtual_router_id 121 # 虚拟路由的 ID 号， 两个节点设置必须一样
-    mcast_src_ip 192.168.1.20 #填写本机ip
+    mcast_src_ip 192.168.18.13 #填写本机ip
     priority 100 # 节点优先级,主要比从节点优先级高
     nopreempt # 优先级高的设置 nopreempt 解决异常恢复后再次抢占的问题
     advert_int 1
@@ -166,12 +166,12 @@ vrrp_instance VI_1 {
     }
     # 将 track_script 块加入 instance 配置块
     track_script {
-        #check_nginx
-        check_haproxy
+        check_nginx
+        #check_haproxy
     }
 
     virtual_ipaddress {
-        192.168.1.10
+        192.168.18.111/24
     }
 }
 EOF
@@ -182,22 +182,22 @@ global_defs {
    router_id LVS_DEVEL
 }
 
-vrrp_script check_haproxy {
-    script "/etc/keepalived/check_haproxy.sh"
-    interval 3000
-}
+#vrrp_script check_haproxy {
+#    script "/etc/keepalived/check_haproxy.sh"
+#    interval 3000
+#}
 
-# vrrp_script check_nginx {
-#     script "/etc/keepalived/check_nginx.sh"
-#     interval 2
-#     weight -2
-# }
+vrrp_script check_nginx {
+    script "/etc/keepalived/check_nginx.sh"
+    interval 2
+    weight -2
+}
 
 vrrp_instance VI_1 {
     state BACKUP #来决定主从
     interface ens18 # 绑定虚拟 IP 的网络接口，根据自己的机器填写
     virtual_router_id 121 # 虚拟路由的 ID 号， 两个节点设置必须一样
-    mcast_src_ip 192.168.1.21 #填写本机ip
+    mcast_src_ip 192.168.18.14 #填写本机ip
     priority 90 # 节点优先级,主要比从节点优先级高
     nopreempt # 优先级高的设置 nopreempt 解决异常恢复后再次抢占的问题
     advert_int 1
@@ -212,7 +212,7 @@ vrrp_instance VI_1 {
     }
 
     virtual_ipaddress {
-        192.168.1.10
+        192.168.18.111/24
     }
 }
 EOF
@@ -228,6 +228,7 @@ if [ `ps -C haproxy --no-header | wc -l` == 0 ]; then
         fi
 fi
 EOF
+
 #添加可执行权限
 chmod +x /etc/keepalived/check_haproxy.sh
 #在所有Master节点上启动HAProxy和Keepalived，并设置自启动
@@ -235,6 +236,25 @@ systemctl start haproxy keepalived
 systemctl enable haproxy keepalived
 systemctl status haproxy keepalived
 ```
+
+## 所有master执行
+
+cat > /etc/keepalived/check_nginx.sh << EOF
+
+# !/bin/bash
+
+count=`ps aux |grep nginx|grep -v grep|wc -l`
+if [ $count -eq 0 ];then
+    nginx
+else
+    sleep 3
+    systemctl stop keepalived.service
+fi
+EOF
+
+# 添加可执行权限
+
+chmod +x /etc/keepalived/check_nginx.sh
 
 ## 安装k8s
 
@@ -250,7 +270,7 @@ repo_gpgcheck=0
 gpgkey=https://mirrors.aliyun.com/kubernetes/yum/doc/yum-key.gpg https://mirrors.aliyun.com/kubernetes/yum/doc/rpm-package-key.gpg
 EOF
 #所有节点安装kubectl、kubelet、kubeadm并设置开机启动
-yum -y install kubelet-1.23.9 kubeadm-1.23.9 kubectl-1.23.9 && systemctl enable kubelet && systemctl start kubelet
+yum -y install kubelet-1.23.9 kubeadm-1.23.9 kubectl-1.23.9 && systemctl enable kubelet
 
 #由于镜像在google在Registry上，国内无法访问，需要手动从阿里云或其他Registry上下载
 kubeadm config images list --kubernetes-version 1.23.9
@@ -279,12 +299,12 @@ cat > /etc/kubernetes/kubeadm-config.yaml << EOF
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
 kubernetesVersion: v1.23.9
-controlPlaneEndpoint: "192.168.1.10:6443"
+controlPlaneEndpoint: "192.168.18.111:6443"
 apiServer:
   certSANs:
-  - 192.168.1.20
-  - 192.168.1.21
-  - 192.168.1.10
+  - 192.168.18.13
+  - 192.168.18.14
+  - 192.168.18.111
 networking:
   podSubnet: 10.244.0.0/16
 EOF
