--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -137,26 +137,26 @@ EOF
 
 #在Master1节点上创建Keepalived配置文件：
 cat > /etc/keepalived/keepalived.conf << EOF
-global_defs {
-   router_id LVS_DEVEL
-}
+#global_defs {
+#   router_id LVS_DEVEL
+#}
 
-vrrp_script check_haproxy {
-    script "/etc/keepalived/check_haproxy.sh"
-    interval 3000
-}
+#vrrp_script check_haproxy {
+#    script "/etc/keepalived/check_haproxy.sh"
+#    interval 3000
+#}
 
-# vrrp_script check_nginx {
-#     script "/etc/keepalived/check_nginx.sh"
-#     interval 2
-#     weight -2
-# }
+vrrp_script check_nginx {
+    script "/etc/keepalived/check_nginx.sh"
+    interval 2
+    weight -2
+}
 
 vrrp_instance VI_1 {
     state MASTER #来决定主从
     interface ens18 # 绑定虚拟 IP 的网络接口，根据自己的机器填写
     virtual_router_id 121 # 虚拟路由的 ID 号， 两个节点设置必须一样
-    mcast_src_ip 192.168.1.20 #填写本机ip
+    mcast_src_ip 192.168.18.13 #填写本机ip
     priority 100 # 节点优先级,主要比从节点优先级高
     nopreempt # 优先级高的设置 nopreempt 解决异常恢复后再次抢占的问题
     advert_int 1
@@ -166,38 +166,38 @@ vrrp_instance VI_1 {
     }
     # 将 track_script 块加入 instance 配置块
     track_script {
-        #check_nginx
-        check_haproxy
+        check_nginx
+        #check_haproxy
     }
 
     virtual_ipaddress {
-        192.168.1.10
+        192.168.1.111
     }
 }
 EOF
 
 #在Master2节点上创建Keepalived配置文件
 cat > /etc/keepalived/keepalived.conf << EOF
-global_defs {
-   router_id LVS_DEVEL
-}
+#global_defs {
+#   router_id LVS_DEVEL
+#}
 
-vrrp_script check_haproxy {
-    script "/etc/keepalived/check_haproxy.sh"
-    interval 3000
-}
+#vrrp_script check_haproxy {
+#    script "/etc/keepalived/check_haproxy.sh"
+#    interval 3000
+#}
 
-# vrrp_script check_nginx {
-#     script "/etc/keepalived/check_nginx.sh"
-#     interval 2
-#     weight -2
-# }
+vrrp_script check_nginx {
+    script "/etc/keepalived/check_nginx.sh"
+    interval 2
+    weight -2
+}
 
 vrrp_instance VI_1 {
     state BACKUP #来决定主从
     interface ens18 # 绑定虚拟 IP 的网络接口，根据自己的机器填写
     virtual_router_id 121 # 虚拟路由的 ID 号， 两个节点设置必须一样
-    mcast_src_ip 192.168.1.21 #填写本机ip
+    mcast_src_ip 192.168.18.14 #填写本机ip
     priority 90 # 节点优先级,主要比从节点优先级高
     nopreempt # 优先级高的设置 nopreempt 解决异常恢复后再次抢占的问题
     advert_int 1
@@ -212,7 +212,7 @@ vrrp_instance VI_1 {
     }
 
     virtual_ipaddress {
-        192.168.1.10
+        192.168.18.111
     }
 }
 EOF
@@ -279,12 +279,12 @@ cat > /etc/kubernetes/kubeadm-config.yaml << EOF
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
 kubernetesVersion: v1.23.9
-controlPlaneEndpoint: "192.168.1.10:6443"
+controlPlaneEndpoint: "192.168.18.111:6443"
 apiServer:
   certSANs:
-  - 192.168.1.20
-  - 192.168.1.21
-  - 192.168.1.10
+  - 192.168.18.13
+  - 192.168.18.14
+  - 192.168.18.111
 networking:
   podSubnet: 10.244.0.0/16
 EOF
