--- a/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
+++ b/Linux/Centos/Kubernetes/k8s1.23_ha_install.md
@@ -171,7 +171,7 @@ vrrp_instance VI_1 {
     }
 
     virtual_ipaddress {
-        192.168.1.10
+        192.168.18.111
     }
 }
 EOF
@@ -237,12 +237,11 @@ systemctl enable haproxy keepalived
 systemctl status haproxy keepalived
 ```
 
+```shell
 ## 所有master执行
 
 cat > /etc/keepalived/check_nginx.sh << EOF
-
 # !/bin/bash
-
 count=`ps aux |grep nginx|grep -v grep|wc -l`
 if [ $count -eq 0 ];then
     nginx
@@ -255,6 +254,7 @@ EOF
 # 添加可执行权限
 
 chmod +x /etc/keepalived/check_nginx.sh
+```
 
 ## 安装k8s
 
