--- a/Linux/RedHat_Series/磁盘扩容并格式化.md
+++ b/Linux/RedHat_Series/磁盘扩容并格式化.md
@@ -1,6 +1,6 @@
-# 在 CentOS 7 中将新磁盘格式化为 LVM 并用于扩大根分区
+# 磁盘扩容
 
-## 步骤1
+## Centos7磁盘格式化为LVM并扩容根分区
 
 1. **查看新磁盘**
 
@@ -90,30 +90,23 @@
 
     使用 `df -h` 命令，你可以看到 `/` 分区现在有更多的可用空间：
 
-## 步骤2（方式2）
+## Centos7磁盘格式化为LVM并扩容根分区（方式2）
+
 ```bash
 # 查看当前的硬盘信息
 fdisk -l
-
 # 创建物理卷, 这里假设新硬盘的设备名为 /dev/sdb
 pvcreate /dev/sdb
-
 # 查看现有的卷组信息
 vgs
-
 # 假设现有的卷组名为 vg0, 将新的物理卷加入到现有的卷组
 vgextend vg0 /dev/sdb
-
 # 如果没有现有的卷组，创建一个新的卷组, 假设新的卷组名为 vg0
 vgcreate vg0 /dev/sdb
-
 # 扩展逻辑卷, 假设逻辑卷名为 lv_root, 卷组名为 vg0
 lvextend -l +100%FREE /dev/vg0/lv_root
-
 # 扩展文件系统，如果使用的是ext4文件系统:
 resize2fs /dev/vg0/lv_root
-
 # 如果使用的是xfs文件系统:
 xfs_growfs /dev/vg0/lv_root
-
 ```
