--- a/Linux/Shell/常用脚本和命令.md
+++ b/Linux/Shell/常用脚本和命令.md
@@ -8,7 +8,9 @@
 ### vim替换字符，在命令状态下输入
 %s/replicas: 2/replicas: 1/g
 ```
+
 2. 脚本匹配文件中字符串，然后替换
+
 ```bash
 #!/bin/bash
 # 先匹配nginx.conf中的conf.d-A或者conf.d-B
@@ -47,7 +49,22 @@ fi
 #echo "环境切换完成"
 
 ```
-3. 保留目录下设定时长的文件
+
+## 保留目录下设定时长的文件
+
 ```shell
 
+```
+
+## 查看端口进程命令
+
+```shell
+#查看某个端口占用情况，例如查看3306端口被哪个进程所占用
+netstat -tunlp | grep 3306
+netstat -anp | grep ":22"
+netstat -aultp  //查看哪些端口被占用
+lsof -iTCP:22 -sTCP:LISTEN
+#根据进程名查看相应进程信息,根据进程 id 查看进程的详细信息
+ps -ef | grep php
+ps -aux | grep php
 ```
